<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">DiskInfo</string>
    <string name="themes">Theme</string>
    <string name="dynamic_colors">Dynamic Colors</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="preferences">Preferences</string>
    <string name="animate_bars">Show bar animation</string>
    <string name="show_block_size">Show block size</string>
    <string name="app_colors">App Colors</string>
    <string name="auto">Auto</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="advance_mode">Advance Mode</string>
    <string name="show_more_than_just_basic_partitions">Shows more than just basic partitions</string>
    <string name="not_available_with_dynamic_colors">Not available with Dynamic Colors</string>
    <string name="amoled_mode">AMOLED MODE</string>
    <string name="partitions">Partitions</string>
    <string name="basic_partitions">Basic Partitions</string>
    <string name="memory">Memory</string>
    <string name="ram">RAM</string>
    <string name="zram">ZRAM</string>
    <string name="total">total</string>
    <string name="free">free</string>
    <string name="used">used</string>
    <string name="data">Data</string>
    <string name="system">System</string>
    <string name="cache">Cache</string>
    <string name="sdcard_internal">SD card (Internal)</string>
    <string name="sdcard_portable">SD card (Portable)</string>
    <string name="otg">OTG</string>
    <string name="swap">Swap</string>
    <string name="cached">Cached</string>
    <string name="swap_cached">SwapCached</string>
    <string name="partition_tooltip">partition mount path (partition filesystem)</string>
    <string name="access_type_tooltip">Access Type (readOnly or read/write)</string>
    <string name="block_size_tooltip">Block size</string>
    <string name="filesystem_tooltip">FileSystem type</string>
    <string name="unit_system">Unit System</string>
    <string name="si">SI</string>
    <string name="iec">IEC</string>
    <string name="byteShort">"B"</string>
    <string name="kilobyteShort">"KB"</string>
    <string name="megabyteShort">"MB"</string>
    <string name="gigabyteShort">"GB"</string>
    <string name="terabyteShort">"TB"</string>
    <string name="petabyteShort">"PB"</string>

    <string name="kibibyteShort">"KiB"</string>
    <string name="mebibyteShort">"MiB"</string>
    <string name="gibibyteShort">"GiB"</string>
    <string name="tebibyteShort">"TiB"</string>
    <string name="pebibyteShort">"PiB"</string>

    <string name="fileSizeSuffix">"<xliff:g id="NUMBER">%1$s</xliff:g> <xliff:g id="UNIT">%2$s</xliff:g>"</string>
    <string name="search">Search</string>
    <string name="not_found">not found</string>
    <string name="language">Language</string>
    <string name="select_language">Select language</string>
    <string name="language_help_text">Feel free to help me translate this app in your language or improve existing one.\n Drop a mail at drhowdydoo@gmail.com</string>
    <string name="search_function">Search Function</string>
    <string name="startswith">StartsWith</string>
    <string name="contains">Contains</string>
    <string name="equals">Equals</string>
    <string name="advance_settings">Advance settings</string>
</resources>