<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="34dp"
    tools:ignore="contentDescription">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:drawablePadding="4dp"
        android:gravity="center"
        android:text="@string/app_colors"
        android:textAppearance="?attr/textAppearanceHeadlineSmall"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/ic_theme_large"
        app:drawableTint="?attr/colorPrimary" />

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="12dp"
        android:gravity="center"
        android:orientation="horizontal">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/theme_purple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:checkable="true"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="18dp"
            app:checkedIcon="@drawable/ic_check"
            app:checkedIconMargin="17dp"
            tools:ignore="DuplicateSpeakableTextCheck">

            <ImageView
                android:id="@+id/img_purple"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/ic_circle_24" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/theme_red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:checkable="true"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="18dp"
            app:checkedIcon="@drawable/ic_check"
            app:checkedIconMargin="17dp">

            <ImageView
                android:id="@+id/img_red"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/ic_circle_24" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/theme_yellow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:checkable="true"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="18dp"
            app:checkedIcon="@drawable/ic_check"
            app:checkedIconMargin="17dp">

            <ImageView
                android:id="@+id/img_yellow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/ic_circle_24" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/theme_green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:checkable="true"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="18dp"
            app:checkedIcon="@drawable/ic_check"
            app:checkedIconMargin="17dp">

            <ImageView
                android:id="@+id/img_green"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/ic_circle_24" />

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/theme_orange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:checkable="true"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="18dp"
            app:checkedIcon="@drawable/ic_check"
            app:checkedIconMargin="17dp">

            <ImageView
                android:id="@+id/img_orange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/ic_circle_24" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/theme_pink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:checkable="true"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="18dp"
            app:checkedIcon="@drawable/ic_check"
            app:checkedIconMargin="17dp">

            <ImageView
                android:id="@+id/img_pink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/ic_circle_24" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/theme_dynamic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:checkable="true"
            android:clickable="true"
            android:focusable="true"
            android:visibility="gone"
            app:cardCornerRadius="16dp"
            app:checkedIcon="@drawable/ic_check"
            app:checkedIconMargin="17dp">

            <ImageView
                android:id="@+id/img_dynamic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/ic_pie" />

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="12dp"
        android:text="@string/themes"
        android:textAppearance="?attr/textAppearanceTitleLarge"
        android:textStyle="bold" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/appTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:selectionRequired="true"
        app:singleSelection="true">

        <Button
            android:id="@+id/theme_auto"
            style="@style/App.ToggleButtons.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/auto" />

        <Button
            android:id="@+id/theme_light"
            style="@style/App.ToggleButtons.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/light" />

        <Button
            android:id="@+id/theme_dark"
            style="@style/App.ToggleButtons.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dark" />


    </com.google.android.material.button.MaterialButtonToggleGroup>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView_amoledMode"
        style="?attr/materialCardViewFilledStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:clickable="true"
        android:focusable="true"
        app:cardCornerRadius="32dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="6dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_vertical"
                    android:text="@string/amoled_mode"
                    android:textAppearance="?attr/textAppearanceTitleMedium"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtView_amoledMode_body"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha="0.5"
                    android:text="@string/not_available_with_dynamic_colors"
                    android:textAppearance="?attr/textAppearanceTitleSmall"
                    android:visibility="gone" />

            </LinearLayout>


            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/switch_amoledMode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical" />

        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>


    <TextView
        android:id="@+id/txtView_dynamic_colors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:text="@string/dynamic_colors"
        android:textAppearance="?attr/textAppearanceTitleLarge"
        android:textStyle="bold" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:selectionRequired="true"
        app:singleSelection="true">

        <Button
            android:id="@+id/dynamic_on"
            style="@style/App.ToggleButtons.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/on"
            app:icon="@drawable/ic_theme" />

        <Button
            android:id="@+id/dynamic_off"
            style="@style/App.ToggleButtons.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/off"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.button.MaterialButtonToggleGroup>

</LinearLayout>