<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parentView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="24dp"
    android:layout_marginTop="6dp"
    android:layout_marginEnd="24dp"
    android:layout_marginBottom="8dp"
    android:animateLayoutChanges="true">


    <TextView
        android:id="@+id/txtView_mount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:breakStrategy="simple"
        android:ellipsize="end"
        android:gravity="start"
        android:textAppearance="?attr/textAppearanceTitleMedium"
        android:tooltipText="@string/partition_tooltip"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toStartOf="@+id/txtView_total_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/txtView_total_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceLabelLarge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip_fileSystem"
        style="@style/Widget.Material3.Chip.Suggestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:clickable="false"
        android:gravity="center_vertical|start"
        android:tooltipText="@string/filesystem_tooltip"
        app:chipCornerRadius="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtView_mount" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip_access"
        style="@style/Widget.Material3.Chip.Suggestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:checked="true"
        android:clickable="false"
        android:gravity="center_vertical|start"
        android:tooltipText="@string/access_type_tooltip"
        app:chipCornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="@id/chip_fileSystem"
        app:layout_constraintStart_toEndOf="@id/chip_fileSystem"
        app:layout_constraintTop_toTopOf="@id/chip_fileSystem" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip_blockSize"
        style="@style/Widget.Material3.Chip.Suggestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:checked="true"
        android:clickable="false"
        android:gravity="center_vertical|start"
        android:tooltipText="@string/block_size_tooltip"
        app:chipCornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="@id/chip_access"
        app:layout_constraintStart_toEndOf="@id/chip_access"
        app:layout_constraintTop_toTopOf="@id/chip_access" />

    <TextView
        android:id="@+id/txtView_used_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceBodyMedium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chip_fileSystem" />

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/track_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:indeterminate="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtView_used_size"
        app:trackCornerRadius="16dp"
        app:trackThickness="8dp" />

    <TextView
        android:id="@+id/txtView_unused"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceBodyMedium"
        app:layout_constraintBottom_toBottomOf="@+id/txtView_used_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chip_fileSystem" />


    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/mtrl_divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/track_bar"/>


</androidx.constraintlayout.widget.ConstraintLayout>